--- a/style.css
+++ b/style.css
@@ -609,7 +609,7 @@ h3 {
     align-items: center;
 }
 
-/*texto*/
+/******texto********/
 
 .titulo-form h3 {
     max-width: 550px;
@@ -635,12 +635,6 @@ h3 {
     margin-bottom: 30px;
 }
 
-
-
-
-
-
-
 form {
     display: flex;
     justify-content: space-between;
@@ -654,10 +648,13 @@ input {
     margin-bottom: 25px;
     border-radius: 25px;
     border: 3px solid #B34F93;
-    padding-left: 20px;
     font-size: 20px;
 }
 
+.info li input {
+    padding-left: 20px;
+    font-size: 13px;
+}
 
 input [type="submit"],
 input [type="reset"] {
@@ -666,7 +663,12 @@ input [type="reset"] {
     background-color: #F7ECF5;
     display: flex;
     color: #F7ECF5;
+}
 
+.botones-form {
+    display: flex;
+    gap: 20px;
+    margin-top: 14px;
 }
 
 label {
@@ -724,8 +726,9 @@ textarea {
 .botones-form {
     display: flex;
     gap: 20px;
-
+    margin-top: 14px;
 }
+
 
 /*************** MIS PROYECTOS/ CARROUSEL/galeria*******************************/
 
