--- a/style.css
+++ b/style.css
@@ -663,16 +663,12 @@ input [type="reset"] {
     color: #F7ECF5;
 }
 
-.botones-form {
-    display: flex;
-    gap: 20px;
-    margin-top: 14px;
-}
+
 
 label {
     display: block;
     height: 20px;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     width: 400px;
 }
 
@@ -996,14 +992,14 @@ button:hover {
 
 
 
-@media (max-width: 1200px) {
+@media  screen and  (max-width: 1200px) {
     .informacion-personal {
         grid-gap: 25px;
         grid-template-columns: 75px 1fr 1fr 1fr;
     }
 }
 
-@media (max-width: 992px) {
+@media  screen and  (max-width: 992px) {
     .informacion-personal {
         grid-template-columns: repeat(2, 1fr);
         margin-left: 20px;
@@ -1018,7 +1014,7 @@ button:hover {
     }
 }
 
-@media (max-width: 768px) {
+@media  screen and  (max-width: 768px) {
     .avion-2 {
         display: block;
         text-align: center;
